--- a/07-3.express/views/component/header.ejs
+++ b/07-3.express/views/component/header.ejs
@@ -1,6 +1,6 @@
 <header>
   <ul>
-    <li><a href="/">HOMe</a></li>
+    <li><a href="/">HOME</a></li>
     <li><a href="/login">LOGIN</a></li>
     <li><a href="/register">REGISTER</a></li>
   </ul>
