--- a/12-file-upload/views/index.ejs
+++ b/12-file-upload/views/index.ejs
@@ -91,7 +91,7 @@
 
         // append(key, value)
         formData.append("dynamicFile", file.files[0]);
-        formData.append("titel", title.value);
+        formData.append("title", title.value);
 
         axios({
           method: "post",
