--- a/14-MVC/views/login.ejs
+++ b/14-MVC/views/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>login</title>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -24,7 +24,8 @@
     </style>
   </head>
   <body>
-    <h2>실습 2</h2>
+    <h1>로그인</h1>
+    <a href="/"> 홈으로 이동하기 </a>
 
     <form name="login">
       <br />
@@ -51,15 +52,33 @@
           userPw: form.userPw.value,
         };
 
+        console.log(data);
+        console.log(typeof data.userId);
+        console.log(typeof data.userPw);
+
+        // '최진'은 안됨
+        // data.userId == "apple" && data.userPw == "1"
+        // if (data.userId == "apple" && data.userPw == "1") {
+        //   resultBox.textContent = `로그인 성공!`;
+        //   resultBox.classList.remove("error");
+        //   resultBox.classList.add("success");
+        // } else {
+        //   resultBox.textContent = `아이디 또는 패스워드가 잘못됐습니다.`;
+        //   resultBox.classList.remove("success");
+        //   resultBox.classList.add("error");
+        // }
+
+        // 값 불러오기
+
         // form validation
-        if (!form.userId.checkValidity() || !form.userPw.checkValidity()) {
-          result.textContet = "아이디와 패스워드는 필수값입니다!";
-          return;
-        }
+        // if (!form.userId.checkValidity() || !form.userPw.checkValidity()) {
+        //   result.textContet = "아이디와 패스워드는 필수값입니다!";
+        //   return;
+        // }
 
         axios({
           method: "post",
-          url: "/axios2",
+          url: "/login/userData",
           data: data,
         }).then((response) => {
           console.log(response.data);
