--- a/14-MVC/views/login.ejs
+++ b/14-MVC/views/login.ejs
@@ -21,26 +21,97 @@
         color: red;
         font-weight: 700;
       }
+
+      .main {
+        border: 1px solid black;
+        border-radius: 30px;
+        width: 400px;
+        height: 400px;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+      }
+
+      a {
+        text-decoration: none;
+        color: black;
+        width: 30px;
+      }
+
+      img {
+        width: 70px;
+        height: 70px;
+        margin-left: 160px;
+        margin-top: 10px;
+      }
+
+      .btn {
+        width: 200px;
+        margin: auto;
+      }
+
+      .loginBtn {
+        width: 200px;
+        margin: auto;
+        margin-top: 10px;
+      }
+
+      .mainform {
+        display: flex;
+        flex-direction: column;
+      }
+
+      input {
+        width: 300px;
+        margin-left: 50px;
+      }
+
+      .result {
+        width: 400px;
+        text-align: center;
+        margin-top: 30px;
+      }
     </style>
   </head>
   <body>
     <h1>로그인</h1>
-    <a href="/"> 홈으로 이동하기 </a>
+    <div class="main">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/Chelsea_FC.svg/1200px-Chelsea_FC.svg.png"
+        alt="chelsea"
+      />
+      <form name="login" class="mainform">
+        <br />
+        <label for="userId">
+          <input
+            type="text"
+            name="userId"
+            id="userId"
+            required
+            placeholder="ID"
+          />
+        </label>
+        <br />
+        <label for="userPw">
+          <input
+            type="password"
+            name="userPw"
+            id="userPw"
+            required
+            placeholder="PW"
+          />
+        </label>
+        <button class="loginBtn" type="button" onclick="loginBtn()">
+          로그인
+        </button>
 
-    <form name="login">
-      <br />
-      <label for="userId">
-        ID <input type="text" name="userId" id="userId" required />
-      </label>
-      <br />
-      <label for="userPw">
-        PW
-        <input type="password" name="userPw" id="userPw" required />
-      </label>
-      <button type="button" onclick="loginBtn()">로그인</button>
+        <div class="result"></div>
+      </form>
 
-      <div class="result"></div>
-    </form>
+      <button class="btn">
+        <a href="/"> 홈으로 이동하기 </a>
+      </button>
+    </div>
 
     <script>
       const resultBox = document.querySelector(".result");
