--- a/12-file-upload/views/index.ejs
+++ b/12-file-upload/views/index.ejs
@@ -17,6 +17,11 @@
   </head>
   <body>
     <h1>파일 업로드</h1>
+
+    <button>
+      <a href="/practice1"> 실습 </a>
+    </button>
+
     <h2>Single file upload</h2>
     <p>하나의 input에 하나의 파일을 업로드</p>
 
