--- a/15-MVCmySQL/views/index.ejs
+++ b/15-MVCmySQL/views/index.ejs
@@ -8,6 +8,6 @@
   <body>
     <hr />
     <h1>MVC패턴과 MYSQL연결</h1>
-    <a href="/visitor">방명록 남기기</a>
+    <a href="/visitors">방명록 남기기</a>
   </body>
 </html>
