--- a/15-MVCmySQL/views/visitor.ejs
+++ b/15-MVCmySQL/views/visitor.ejs
@@ -22,7 +22,7 @@
         <input type="text" name="comment" id="" placeholder="방명록" />
         <br />
         <div id="button-group">
-          <button type="button" onclick="createVisitor();">등록</button>
+          <button type="button" onclick="createVisitor()">등록</button>
         </div>
       </form>
     </fieldset>
@@ -41,8 +41,20 @@
           <td><%= data[i].id %></td>
           <td><%= data[i].name %></td>
           <td><%= data[i].comment %></td>
-          <td><button type="button">수정</button></td>
-          <td><button type="button">삭제</button></td>
+          <td>
+            <button type="button" onclick="editVisitor('<%= data[i].id%>')">
+              수정
+            </button>
+          </td>
+          <!-- editVisitor에 id 값 넘겨줌  -->
+          <td>
+            <button
+              type="button"
+              onclick="deleteVisitor(this,'<%= data[i].id%>')"
+            >
+              삭제
+            </button>
+          </td>
         </tr>
         <% } %>
       </tbody>
