12월 9일 토요일

--- a/00-혼자복습해보기/node.js 복습/views/index.ejs
+++ b/00-혼자복습해보기/node.js 복습/views/index.ejs
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>main page</title>
+
+    <style>
+      button {
+        width: 200px;
+        height: 50px;
+      }
+
+      a {
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
+      }
+    </style>
   </head>
   <body>
     <h1>Main Page</h1>
@@ -13,6 +27,11 @@
 
     <button>
       <a href="/user/signin"> 로그인 </a>
+    </button>
+    <br />
+    <br />
+    <button>
+      <a href="/user/profile"> 회원 정보 </a>
     </button>
 
     <button>
