--- a/22-encrytp-pw/views/index.ejs
+++ b/22-encrytp-pw/views/index.ejs
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>main page</title>
   </head>
   <body>
     <h1>메인 화면</h1>
 
-    <a href="/signup"> 회원가입 </a>
-    <a href="/signin"> 로그인 </a>
+    <button>
+      <a href="/register"> 회원가입 </a>
+    </button>
+
+    <button>
+      <a href="/login"> 로그인 </a>
+    </button>
   </body>
 </html>
