--- a/34-styles/src/style/practice.scss
+++ b/34-styles/src/style/practice.scss
@@ -13,6 +13,27 @@
   left: 100px;
   background-color: rgb(0, 0, 166);
 }
+
+.eye {
+  position: relative;
+  border-radius: 50%;
+}
+
+.eye-white {
+  width: 40px;
+  height: 40px;
+  top: 20px;
+  left: 20px;
+  background-color: white;
+}
+
+.eye-black {
+  width: 20px;
+  height: 20px;
+  top: 10px;
+  left: 5px;
+  background-color: black;
+}
 .larva .body.body2 {
   top: 150px;
   left: 160px;
@@ -36,6 +57,7 @@
 }
 .larva .grass {
   position: absolute;
-  top: 260px;
+  top: 0px;
   left: 0;
+  z-index: -1;
 }
